--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/sk3ltn-syntax",
+  "repository": "https://github.com/rafawhs/sk3ltn",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
